--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body>
 	<!-- Nav bar-->
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      	<div class="container">
+      	<div class="container-fluid">
 
         <!-- Nav bar header -->
         <div class="navbar-header">
-          	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><span class="sr-only">Toggle navigation</span></button>
+          	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
           	<a class="navbar-brand" href="#">Jamie Bird</a>
         </div>
 
@@ -111,7 +111,7 @@
 	</div>
 	</nav>
 
-
+	<script src="https://code.jquery.com/jquery-2.1.3.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
