Prep for blog template

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             	<li><a href="#research-con">Research</a></li>
             	<li><a href="#projects-con">Projects</a></li>
             	<li><a href="#teaching-con">Teaching</a></li>
-
+		<li><a href="blog/index.php">Blog</a></li>
         </div>
 
       	</div>
@@ -71,7 +71,7 @@
 			<p>Aenean quis turpis tincidunt, suscipit quam non, ornare massa. Donec tempor, lacus tempor vulputate pulvinar, est leo porttitor justo, et consectetur mauris felis non purus. Proin fringilla, ex id ultricies venenatis, augue turpis gravida tellus, ac faucibus leo ipsum vel urna. Quisque laoreet lacus dui, vitae ultrices nulla pulvinar at. Pellentesque enim mauris, rutrum et justo nec, eleifend vehicula justo. Cras faucibus imperdiet nunc sed bibendum. Fusce eget feugiat nulla. Nulla facilisi. Suspendisse potenti. Nunc vehicula ac ex eu lacinia.</p>
 			<h3>Open Stack</h3>
 			<p>Aenean quis turpis tincidunt, suscipit quam non, ornare massa. Donec tempor, lacus tempor vulputate pulvinar, est leo porttitor justo, et consectetur mauris felis non purus. Proin fringilla, ex id ultricies venenatis, augue turpis gravida tellus, ac faucibus leo ipsum vel urna. Quisque laoreet lacus dui, vitae ultrices nulla pulvinar at. Pellentesque enim mauris, rutrum et justo nec, eleifend vehicula justo. Cras faucibus imperdiet nunc sed bibendum. Fusce eget feugiat nulla. Nulla facilisi. Suspendisse potenti. Nunc vehicula ac ex eu lacinia.</p>
-			<h3>SECCRIT</h3>
+			<h3>Anomaly Detection in Cloud Computing - SECCRIT</h3>
 			<p>Aenean quis turpis tincidunt, suscipit quam non, ornare massa. Donec tempor, lacus tempor vulputate pulvinar, est leo porttitor justo, et consectetur mauris felis non purus. Proin fringilla, ex id ultricies venenatis, augue turpis gravida tellus, ac faucibus leo ipsum vel urna. Quisque laoreet lacus dui, vitae ultrices nulla pulvinar at. Pellentesque enim mauris, rutrum et justo nec, eleifend vehicula justo. Cras faucibus imperdiet nunc sed bibendum. Fusce eget feugiat nulla. Nulla facilisi. Suspendisse potenti. Nunc vehicula ac ex eu lacinia.</p>
 			<h3>PhD</h3>
 			<p>Aenean quis turpis tincidunt, suscipit quam non, ornare massa. Donec tempor, lacus tempor vulputate pulvinar, est leo porttitor justo, et consectetur mauris felis non purus. Proin fringilla, ex id ultricies venenatis, augue turpis gravida tellus, ac faucibus leo ipsum vel urna. Quisque laoreet lacus dui, vitae ultrices nulla pulvinar at. Pellentesque enim mauris, rutrum et justo nec, eleifend vehicula justo. Cras faucibus imperdiet nunc sed bibendum. Fusce eget feugiat nulla. Nulla facilisi. Suspendisse potenti. Nunc vehicula ac ex eu lacinia.</p>
@@ -105,7 +105,7 @@
 	<nav class="navbar navbar-default navbar-fixed-bottom">
   	<div class="container">
 		<p class="navbar-text navbar-left">D30 InfoLab, Lancaster University, Lancaster, LA1 4WA</p>
-		<p class="navbar-text navbar-right"><a href="#" class="navbar-link">j.bird1@lancaster.ac.uk</a></p>
+		<p class="navbar-text navbar-right"><a href="mailto:j.bird1@lancaster.ac.uk" class="navbar-link">j.bird1@lancaster.ac.uk</a></p>
 		<p class="navbar-text navbar-right"><a href="https://twitter.com/THAT_JAMIE" class="navbar-link">Twitter</a></p>
 		<p class="navbar-text navbar-right"><a href="https://github.com/biirdy" class="navbar-link">Github</a></p>
 	</div>
