--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
 			<h3>SCC.306 Internet Enginereering - Lancaster Uniersity</h3>
 			<p>Aenean quis turpis tincidunt, suscipit quam non, ornare massa. Donec tempor, lacus tempor vulputate pulvinar, est leo porttitor justo, et consectetur mauris felis non purus. Proin fringilla, ex id ultricies venenatis, augue turpis gravida tellus, ac faucibus leo ipsum vel urna. Quisque laoreet lacus dui, vitae ultrices nulla pulvinar at. Pellentesque enim mauris, rutrum et justo nec, eleifend vehicula justo. Cras faucibus imperdiet nunc sed bibendum. Fusce eget feugiat nulla. Nulla facilisi. Suspendisse potenti. Nunc vehicula ac ex eu lacinia.</p>
 		</div>
+
+		<hr>
+
+		<p> Jamie Bird&copy;.</p>
 		
 	</div>
 
